--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <button id="closeBtn" class="closeBtn">닫기</button>
     </section>
 
+    <script src="hangil.js"></script>
     <script src="common.js"></script>
   </body>
 </html>
